src/ListmanParser.java
// $ANTLR 3.5 /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g 2013-07-17 15:25:24

import java.io.*;
import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class ListmanParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSN", "ATOM", "CAR", "CDR", 
		"EOL", "LENGTH", "LPAR", "RPAR", "SPACE"
	};
	public static final int EOF=-1;
	public static final int ASSN=4;
	public static final int ATOM=5;
	public static final int CAR=6;
	public static final int CDR=7;
	public static final int EOL=8;
	public static final int LENGTH=9;
	public static final int LPAR=10;
	public static final int RPAR=11;
	public static final int SPACE=12;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ListmanParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ListmanParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ListmanParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g"; }



		private String[] store = new String[5];
	        // private List<String> List1 = new ArrayList<String>();




	// $ANTLR start "prog"
	// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:17:1: prog : ( sexpr )* EOF ;
	public final void prog() throws RecognitionException {
		try {
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:18:2: ( ( sexpr )* EOF )
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:18:4: ( sexpr )* EOF
			{
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:18:4: ( sexpr )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==LPAR) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:18:4: sexpr
					{
					pushFollow(FOLLOW_sexpr_in_prog24);
					sexpr();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,EOF,FOLLOW_EOF_in_prog27); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "sexpr"
	// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:26:1: sexpr : ( list | ( '(' CAR sexpr ')' | '(' CDR sexpr ')' | '(' LENGTH sexpr ')' ) );
	public final void sexpr() throws RecognitionException {
		try {
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:27:2: ( list | ( '(' CAR sexpr ')' | '(' CDR sexpr ')' | '(' LENGTH sexpr ')' ) )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==LPAR) ) {
				int LA3_1 = input.LA(2);
				if ( ((LA3_1 >= CAR && LA3_1 <= CDR)||LA3_1==LENGTH) ) {
					alt3=2;
				}
				else if ( (LA3_1==ATOM||LA3_1==LPAR) ) {
					alt3=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:27:4: list
					{
					pushFollow(FOLLOW_list_in_sexpr69);
					list();
					state._fsp--;

					 LispIntRun.output.println("This is a sexpr composed by list: term+."); 
					}
					break;
				case 2 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:28:4: ( '(' CAR sexpr ')' | '(' CDR sexpr ')' | '(' LENGTH sexpr ')' )
					{
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:28:4: ( '(' CAR sexpr ')' | '(' CDR sexpr ')' | '(' LENGTH sexpr ')' )
					int alt2=3;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==LPAR) ) {
						switch ( input.LA(2) ) {
						case CAR:
							{
							alt2=1;
							}
							break;
						case CDR:
							{
							alt2=2;
							}
							break;
						case LENGTH:
							{
							alt2=3;
							}
							break;
						default:
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 2, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:28:5: '(' CAR sexpr ')'
							{
							match(input,LPAR,FOLLOW_LPAR_in_sexpr91); 
							match(input,CAR,FOLLOW_CAR_in_sexpr93); 
							pushFollow(FOLLOW_sexpr_in_sexpr95);
							sexpr();
							state._fsp--;

							match(input,RPAR,FOLLOW_RPAR_in_sexpr97); 
							LispIntRun.output.println("This is a sexpr composed by CAR.");
							}
							break;
						case 2 :
							// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:29:19: '(' CDR sexpr ')'
							{
							match(input,LPAR,FOLLOW_LPAR_in_sexpr119); 
							match(input,CDR,FOLLOW_CDR_in_sexpr121); 
							pushFollow(FOLLOW_sexpr_in_sexpr123);
							sexpr();
							state._fsp--;

							match(input,RPAR,FOLLOW_RPAR_in_sexpr125); 
							 LispIntRun.output.println("This is a sexpr composed by CDR.");
							}
							break;
						case 3 :
							// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:30:19: '(' LENGTH sexpr ')'
							{
							match(input,LPAR,FOLLOW_LPAR_in_sexpr172); 
							match(input,LENGTH,FOLLOW_LENGTH_in_sexpr174); 
							pushFollow(FOLLOW_sexpr_in_sexpr176);
							sexpr();
							state._fsp--;

							match(input,RPAR,FOLLOW_RPAR_in_sexpr178); 
							 LispIntRun.output.println("This is a sexpr composed by LENGTH.");
							}
							break;

					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "sexpr"



	// $ANTLR start "list"
	// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:34:1: list : '(' ( term )+ ')' ;
	public final void list() throws RecognitionException {
		try {
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:35:9: ( '(' ( term )+ ')' )
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:35:17: '(' ( term )+ ')'
			{
			match(input,LPAR,FOLLOW_LPAR_in_list247); 
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:35:21: ( term )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ATOM||LA4_0==LPAR) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:35:21: term
					{
					pushFollow(FOLLOW_term_in_list249);
					term();
					state._fsp--;

					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}

			match(input,RPAR,FOLLOW_RPAR_in_list252); 
			 LispIntRun.output.println("This is a list composed by term+: ATOM | sexpr");
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "list"



	// $ANTLR start "term"
	// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:41:1: term returns [String value] : (v= ATOM | '(' sexpr ')' );
	public final String term() throws RecognitionException {
		String value = null;


		Token v=null;

		try {
			// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:42:2: (v= ATOM | '(' sexpr ')' )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ATOM) ) {
				alt5=1;
			}
			else if ( (LA5_0==LPAR) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:42:4: v= ATOM
					{
					v=(Token)match(input,ATOM,FOLLOW_ATOM_in_term420); 
					 
					                                      LispIntRun.output.println("This is a term composed by an ATOM");
					}
					break;
				case 2 :
					// /Users/jorgejaso/NetBeansProjects/LispInt/src/Listman.g:44:4: '(' sexpr ')'
					{
					match(input,LPAR,FOLLOW_LPAR_in_term450); 
					pushFollow(FOLLOW_sexpr_in_term452);
					sexpr();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_term454); 
					 LispIntRun.output.println("This is a term composed by a sexpr");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return value;
	}
	// $ANTLR end "term"

	// Delegated rules



	public static final BitSet FOLLOW_sexpr_in_prog24 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_EOF_in_prog27 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_list_in_sexpr69 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_LPAR_in_sexpr91 = new BitSet(new long[]{0x0000000000000040L});
	public static final BitSet FOLLOW_CAR_in_sexpr93 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_sexpr_in_sexpr95 = new BitSet(new long[]{0x0000000000000800L});
	public static final BitSet FOLLOW_RPAR_in_sexpr97 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_LPAR_in_sexpr119 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_CDR_in_sexpr121 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_sexpr_in_sexpr123 = new BitSet(new long[]{0x0000000000000800L});
	public static final BitSet FOLLOW_RPAR_in_sexpr125 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_LPAR_in_sexpr172 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_LENGTH_in_sexpr174 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_sexpr_in_sexpr176 = new BitSet(new long[]{0x0000000000000800L});
	public static final BitSet FOLLOW_RPAR_in_sexpr178 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_LPAR_in_list247 = new BitSet(new long[]{0x0000000000000420L});
	public static final BitSet FOLLOW_term_in_list249 = new BitSet(new long[]{0x0000000000000C20L});
	public static final BitSet FOLLOW_RPAR_in_list252 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ATOM_in_term420 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_LPAR_in_term450 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_sexpr_in_term452 = new BitSet(new long[]{0x0000000000000800L});
	public static final BitSet FOLLOW_RPAR_in_term454 = new BitSet(new long[]{0x0000000000000002L});
}
